--- a/voice-tunes-frontend/styles.css
+++ b/voice-tunes-frontend/styles.css
@@ -116,7 +116,7 @@ html {
   font-size: 19px;
 }
 
-#modelLoading, #transcribingMessage {
+#modelLoading, .transcribingMessage {
   margin: 0 auto;
   padding: 0px 14px;
   font-size: 31px;
@@ -143,7 +143,7 @@ html {
   top: 4px;
 }
 
-#transcribingMessage {
+.transcribingMessage {
   position: relative;
   top: 30px;
   animation: pulsing-fade 1.2s ease-in-out infinite;
@@ -376,7 +376,7 @@ hr {
   letter-spacing: 1.2px;
 }
 
-#visualizerContainer {
+.visualizerContainer {
   min-height: 175px;
   position: relative;
   overflow-x: auto;
@@ -388,12 +388,12 @@ hr {
   text-align: center;
 }
 
-#visualizerContainer:hover {
+.visualizerContainer:hover {
   border: 3.9px solid rgba(175, 175, 175, 0.5) 
   /* border: 3.9px solid rgba(65, 204, 226, 0.4)  */
 }
 
-#playIcon, #stopIcon {
+.playIcon, .stopIcon {
   position: absolute;
   width: 65px;
   left: calc(50% - 30px);
@@ -401,7 +401,7 @@ hr {
   transition: all 0.4s;
 }
 
-#playIcon:active, #stopIcon:active {
+.playIcon:active, .stopIcon:active {
   transform: scale(.96);
 }
 
