--- a/voice-tunes-frontend/styles.css
+++ b/voice-tunes-frontend/styles.css
@@ -289,16 +289,16 @@ input#usernameDeleteBtn {
   outline: none;
 }
 
-input#usernameDeleteBtn:hover, #cancelBtn:hover {
+input#usernameDeleteBtn:hover, #closeVisualizerBtn:hover {
   filter: brightness(.5) sepia(1) saturate(7000%);
 }
 
-input#usernameDeleteBtn:active, #cancelBtn:active {
+input#usernameDeleteBtn:active, #closeVisualizerBtn:active {
   transform: scale(.9);
   /* filter: brightness(15) sepia(1) saturate(2000%) hue-rotate(358deg); */
   outline:none;
 }
-button#usernameDeleteBtn:focus-within, #cancelBtn:focus-within {
+button#usernameDeleteBtn:focus-within, #closeVisualizerBtn:focus-within {
   outline:none;
 } 
 
@@ -490,14 +490,14 @@ h3#reviewHeader {
   font-family: 'main-text', sans-serif; */
 }
 
-#cancelBtn {
+#closeVisualizerBtn {
   position: absolute;
   top: 15px;
   right: 20px;
   width: 20px;
 }
 
-.closeBtn:disabled, .playBtn:disabled, .deleteBtn:disabled, .downloadBtn:disabled, #saveToComputerBtn:disabled, #saveToAppBtn:disabled, #cancelBtn:disabled, input#submitUsernameBtn:disabled, input#usernameDeleteBtn:disabled{
+.closeVisualizerHistoryBtn:disabled, .playBtn:disabled, .deleteBtn:disabled, .downloadBtn:disabled, #saveToComputerBtn:disabled, #saveToAppBtn:disabled, #closeVisualizerBtn:disabled, input#submitUsernameBtn:disabled, input#usernameDeleteBtn:disabled{
   filter: brightness(.3);
 }
 
@@ -551,7 +551,7 @@ width: 15px;
   margin-top: -.5px;
 }
 
-.closeBtn {
+.closeVisualizerHistoryBtn {
   position: absolute;
   top: 16px;
   right: 23px;
